@@ -11,6 +11,7 @@
     * Fixed Radau5 bug where simulation would not stop when time limit has been exceeded.
     * Radau5(ODE) errors due to Exceptions in callbacks will now raise these Exceptions, rather than Radau5Error.
     * KeyboardInterrupt in Radau5ODE solout callback (e.g., event_indicator) will properly terminate simulation.
+    * Added warning if a solver does not support setting time limits.
 
 --- Assimulo-3.3.1 ---
     * Minor refactoring of Radau5 C implementation:
